keycloak/keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30001
    - name: https
      port: 8443
      targetPort: 8443
      nodePort: 30002
  selector:
    app: keycloak
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  selector:
    matchLabels:
      app: keycloak
  replicas: 1
  strategy: 
      type: "RollingUpdate"
      rollingUpdate: 
        maxSurge: 1
        maxUnavailable: 1
  minReadySeconds: 6
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:22.0.1
          imagePullPolicy: Always
          args: ["start-dev"]
          #volumeMounts:
          #  - name: keycloak-data-volume
          #    mountPath: /opt/keycloak/data/h2 
          ports:
            - name: http
              containerPort: 8080
            - name: https
              containerPort: 8443
      #volumes:
      #  - name: keycloak-data-volume
      #    persistentVolumeClaim:
      #      claimName: keycloak-data-pvc
